minor layout issues fixed

--- a/src/style/components/header.scss
+++ b/src/style/components/header.scss
@@ -125,7 +125,9 @@
       background: #1a1a1a;
       box-sizing: border-box;
       a{
+        display: inherit;
         box-sizing: border-box;
+        text-align: center;
         width: 100%;
         height: 100%;
         line-height: 90px;
